cmake_minimum_required(VERSION 3.14)
project(RT-THREAD)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin/ )
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_SOURCE_DIR}/bin/ )
set(CMAKE_ROOT_PATH ${PROJECT_SOURCE_DIR})

if (WIN32)
	SET( CMAKE_EXECUTABLE_OUTPUT_PATH_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_EXECUTABLE_OUTPUT_PATH_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
	SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/logs)
execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
   ${CMAKE_CURRENT_SOURCE_DIR}/scripts/plot.py
   ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plot.py)

include_directories(include)

add_library(ThreadWrapper src/ThreadUtils/ThreadWrapper.cpp)
target_link_libraries(ThreadWrapper pthread)

add_subdirectory(examples)